prevent dark mode on transparent viewer nav

--- a/darkmode.css
+++ b/darkmode.css
@@ -29,6 +29,10 @@
 	user-select: none; 
 }
 
+#viewer-prev, #viewer-next {
+	background-color: transparent;
+}
+
 /*if dark mode available*/
 @media (prefers-color-scheme: dark) {
 	html, div {
@@ -57,6 +61,10 @@
 
 	.darked a:visited {
 		color: rgb(85, 26, 139);
+	}
+	
+	#viewer-prev, #viewer-next {
+		background-color: transparent;
 	}
 }
 
